--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "recharts": "^3.0.0",
+    "shadcn": "^2.7.0",
+    "sonner": "^2.0.5",
+    "table": "^6.9.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
