--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -26,8 +28,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "google-auth-library": "^10.1.0",
-    "googleapis": "^150.0.1",
+    "cmdk": "^1.1.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.523.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.16.0",
@@ -43,6 +45,7 @@
     "sonner": "^2.0.5",
     "table": "^6.9.0",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -54,7 +57,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
