--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "formidable": "^3.5.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.523.0",
     "mongodb": "^5.9.2",
