--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "recharts": "^3.0.0",
     "shadcn": "^2.7.0",
     "sonner": "^2.0.5",
+    "swr": "^2.3.4",
     "table": "^6.9.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
